--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <a href=""><i class="fab fa-instagram"></i></a> 
         </div>
     </div>
-    <button>
+    <!-- <button>
         <!-- <i class="fas fa-bars"></i> -->
-    </button>
+    <!-- </button> -->  
     <nav>
         <ul>
             <li><a href="#"><i class="i fas fa-home"></i> Home</li></a>
