--- a/index.html
+++ b/index.html
@@ -160,8 +160,13 @@
         <div class="information">
             <div class="details">
                 <div class="contactbox bg-white">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, neque.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore molestiae deserunt assumenda neque alias porro?</p>
+                    <div class="input">
+                        <input type="text" placeholder="your name" class="txtbox">
+                        <input type="text" placeholder="your email" class="txtbox f-right">
+                    </div>
+                    <input type="text" placeholder="your subject" class="msgbox">
+                    <input type="text" placeholder="your message" class="msgbox1">
+                    <button class="btn">send message</button>
                 </div>
             </div>
             <div class="details">
