--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 <div class="main">
     <!-- home section -->
     <section  class="home bg-white">
-        <div class="home-container">
-            <h1>janki patel</h1>
-        </div>
+        <h1>janki patel</h1>
     </section>
     <!-- about section -->
     <section  class="about">
@@ -49,7 +47,7 @@
             <h3>about me</h3>
         </div>
         <div class="p1">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, obcaecati. Unde tempora saepe voluptatum eos mollitia animi atque eaque vero perferendis ullam incidunt molestias facilis, fugiat eligendi labore, ab assumenda! Est provident quo debitis labore voluptas? Deserunt repudiandae minus ex, pariatur at quis est expedita corrupti ipsum eius, earum corporis?</p>
+            <p>Hi i am janki Patel from vadodara. i am a hardworking ,passionate and quick learner software engineer. I had completed my bachelors in computer engineering from gujarat technological univercity and interested in web designing and working on ambicious projects with positive people.</p>
         </div>
         <div class="row">
             <div class="col6">
@@ -68,7 +66,7 @@
                     <p class="p2">Email:pateljanki2224@gmail.com</p>
                     <p class="p2">Address:A/10,gunatitdham soc,b/h opel showroom,atladra,vadodara</p>
                 </div>
-                <p class="p3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum, aut earum. Illum non error est.</p>
+                <!-- <p class="p3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum, aut earum. Illum non error est.</p> -->
            </div>
         </div>
     </section>
@@ -162,7 +160,7 @@
                 <div class="contactbox bg-white">
                     <div class="input">
                         <input type="text" placeholder="your name" class="txtbox">
-                        <input type="text" placeholder="your email" class="txtbox f-right">
+                        <input type="text" placeholder="your email" class="txtbox">
                     </div>
                     <input type="text" placeholder="your subject" class="msgbox">
                     <input type="text" placeholder="your message" class="msgbox1">
